# asteroids

./: Cargo.toml  LICENSE  README.md
docs/: README.md  asteroids.d  asteroids.js  asteroids_bg.js  asteroids_bg.wasm  asteroids_bg.wasm.d.ts  index.html  package.json
src/: main.rs
web/: asteroids_bg.wasm  index.html
