[package]
name = "asteroids"
version = "0.1.0"
authors = ["Keith Bugeja <keith.bugeja@um.edu.mt>"]
edition = "2021"

[lib]
name = "asteroids"
path = "src/main.rs"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# getrandom = { version = "0.2", features = ["js"] }
macroquad = "0.4.4"
# rand = "0.8.5"
